--- a/Readiculous.WebApp/Views/UserMaster/UserMasterScreen.cshtml
+++ b/Readiculous.WebApp/Views/UserMaster/UserMasterScreen.cshtml
@@ -55,6 +55,8 @@
                 }
             </select>
         </div>
+        @* java script problem, refer to bookmasterscreen.cshtml for reference and is js *@
+       @*  <select name="sortOrder" class="form-select filter-input" asp-items="@ViewBag.BookSortTypes"></select> *@
     </div>
 
     <div class="row mx-0">
