--- a/Readiculous.WebApp/Views/Shared/_Layout.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_Layout.cshtml
@@ -179,6 +179,7 @@
 
     @await Html.PartialAsync("_LoginModal")
     @await Html.PartialAsync("_RegisterModal")
+    @await Html.PartialAsync("_RequiredModal")
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
